k8s/coma/apps/slskd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd
  namespace: slskd
spec:
  rules:
    - host: "slskd.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: slskd-main
                port:
                  number: 5030
